# logis_career_ai

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  PHASE4_COMPLETE.md  PHASE4_QUICK_REFERENCE.md  PHASE_0_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  README.md  pyproject.toml  temp_test.json  test_hard_rejection_rules.py  test_phase1_integration.py  test_phase2_skill_matching.py  test_phase3_cv_parsing.py  test_phase4_api.py  test_schema_validation.py
logis_ai_candidate_engine/: .env.example  requirements.txt
logis_ai_candidate_engine/api/: main.py
logis_ai_candidate_engine/api/routes/: __init__.py  cv.py
logis_ai_candidate_engine/config/: skills_taxonomy.yaml  thresholds.yaml
logis_ai_candidate_engine/core/aggregation/: __init__.py  weighted_score_aggregator.py
logis_ai_candidate_engine/core/explainability/: __init__.py  rule_trace_logger.py  section_explanations.py
logis_ai_candidate_engine/core/feature_engineering/: __init__.py
logis_ai_candidate_engine/core/rules/: __init__.py  hard_rejection_engine.py
logis_ai_candidate_engine/core/schemas/: candidate.py  evaluation_response.py  job.py
logis_ai_candidate_engine/data/: sample_candidate.json  sample_cv.txt  sample_job.json
logis_ai_candidate_engine/ml/: __init__.py  cv_candidate_mapper.py  cv_parser.py  embedding_model.py  semantic_similarity.py  skill_matcher.py
logis_ai_candidate_engine/tests/: test_api.py  test_phase4_hybrid_scoring.py  test_phase4_smoke.py  test_rules.py
(+9 files in other folders)
